fixing deprecations in future version